# dd-ie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/examples/: basic_example.ipynb  smoking_analysis.ipynb  tutorial.ipynb
docs/reference/: gs22.do
src/dd_ie/: __init__.py  _logging.py  _types.py  core.py  utils.py
tests/: conftest.py  test_core.py  test_integration.py  test_types.py  test_utils.py
