[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddinteract"
version = "0.2.0"
description = "Double demeaning for unbiased estimation of interactions in fixed effects models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nikolaos Koutounidis", email = "nikolaos.koutounidis@ugent.be" },
]
keywords = [
    "econometrics",
    "fixed-effects",
    "interactions",
    "panel-data",
    "double-demeaning",
    "hausman-test",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "linearmodels>=4.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/nkoutoun/dd-ie"
Documentation = "https://github.com/nkoutoun/dd-ie#readme"
Repository = "https://github.com/nkoutoun/dd-ie"
Issues = "https://github.com/nkoutoun/dd-ie/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dd_ie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "linearmodels", "linearmodels.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
